# cts-email-mcp-server

./: package-lock.json  package.json  pyproject.toml
cantops_email/: server.py  utils.py
legacy_python/: pyproject.toml
src/: index.ts
src/cantops_email/: client.py  document_loader.py  server.py
